data/derived/fa15/progs/unify/prog2855.ml.out
Characters 229-244:
  removeZero (add (padZero l1 l2) (if l1 > l2 then l1 else l2));;
                  ^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type 'a list * 'b list
